--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.1.6",
+    "@clerk/nextjs": "^6.25.4",
+    "inngest": "^3.40.1",
+    "mongoos": "^0.0.1-security",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.1"
+    "react-hot-toast": "^2.5.1",
+    "snakecase-keys": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
