--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,11 @@
-
 {
   "compilerOptions": {
+    "baseUrl": ".",             // Required for "paths" to work
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@models/*": ["models/*"],
+      "@config/*": ["config/*"],
+      "@components/*": ["components/*"]
     }
   }
 }
