Fix path alias and import for User model

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,11 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",             // Required for "paths" to work
+    "baseUrl": ".", 
     "paths": {
-      "@/*": ["./*"],
-      "@models/*": ["models/*"],
-      "@config/*": ["config/*"],
-      "@components/*": ["components/*"]
+      "@/*": ["*"]
     }
   }
 }
